force-app/main/default/objects/DHA_Trigger_Setting__c/fields/Is_Class_Assignment_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Class_Assignment_Trigger_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Class Assignment Trigger Active</label>
    <type>Checkbox</type>
</CustomField>