force-app/main/default/objects/DHA_Trigger_Setting__c/fields/Is_Study_Result_Trigger_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Study_Result_Trigger_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is Study Result Trigger Active</label>
    <type>Checkbox</type>
</CustomField>